fix nav gap

--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -16,7 +16,7 @@
 		font-family: open_sans_condensedbold;
 		text-transform: uppercase;
 		text-decoration: none;
-		margin: 0 -2px;
+		margin: 0 -3px;
 		&:hover, &:focus, &.active {
 			background: #2c2c2c;
 			color: #fff;
